fix: header close button on mobile

--- a/components/Menu/MenuButton.module.sass
+++ b/components/Menu/MenuButton.module.sass
@@ -2,13 +2,12 @@
     transition: 0.15s
 
     &.Open
-        background: var(--color-primary)
 
         &>div
             transition-delay: 0s
 
             &::before
-                background: black
+                background: var(--color-primary)
                 transition-delay: 0.15s
 
             &:nth-child(1)
